gcc/testsuite/rust/rustc/ui/attributes/invalid-repr_dg.rs
#[repr(align(16))]
// { dg-error ".E0517." "" { target *-*-* } .-1 }
pub type Foo = i32;

fn main() {}

